# internal/transport/http/server.go
@@ -64,8 +64,10 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/version", handler.Version)
 	api.POST("/me", handler.Me)
 	api.POST("/notifications/templates/put", handler.PutNotificationTemplate)
+	api.POST("/notifications/templates/get", handler.GetNotificationTemplate)
 	api.POST("/notifications/templates/list", handler.ListNotificationTemplates)
 	api.POST("/notifications/providers/put", handler.PutNotificationProvider)
+	api.POST("/notifications/providers/get", handler.GetNotificationProvider)
 	api.POST("/notifications/providers/list", handler.ListNotificationProviders)
 	api.POST("/notifications/send", handler.SendNotification)
 	api.POST("/notifications/providers/receipt", handler.RecordProviderReceipt)
